--- a/package.json
+++ b/package.json
@@ -3,15 +3,41 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "SET NODE_ENV=development & node ./bin/www",
+    "start:production": "SET NODE_ENV=production & node ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.0.0",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
+    "module-alias": "^2.2.2",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
-    "pug": "2.0.0-beta11"
+    "nodemailer": "^6.4.13",
+    "pug": "2.0.0-beta11",
+    "serve-favicon": "^2.5.0",
+    "swagger-ui-express": "^4.1.4",
+    "validator": "^13.1.17"
+  },
+  "_moduleAliases": {
+    "@": ".",
+    "@common": "common",
+    "@database": "database",
+    "@modules": "modules",
+    "@config": "config.js",
+    "@routes": "routes",
+    "@middlewares": "middlewares"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0"
   }
 }
