--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "SET NODE_ENV=development & node ./bin/www",
-    "start:production": "SET NODE_ENV=production & node ./bin/www"
+    "start": "SET NODE_ENV=development&&node ./bin/www",
+    "start:production": "SET NODE_ENV=production&&node ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
